# libagmv

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  agmv_splash.agmv
.github/workflows/: cmake-multi-platform.yml
docs/: agmvcli_users_guide.docx
examples/convert_agmv_to_avi/: Makefile  convert.agvs  convert_avi_to_agmv.c
examples/convert_avi_to_agmv/: Makefile  convert.agvs  convert_avi_to_agmv.c
examples/simple_agmv_decode/: Makefile  simple_agmv_decode.c
examples/simple_audio_decode/: Makefile  simple_audio_decode.c
examples/simple_custom_video_encode/: agmvcli.quality  foxlogo.agvs
examples/simple_decode_agmvcli/: foxlogo.agvs
examples/simple_decoding/: FOXLOGO.agmv  Makefile  simple_decoding.c
examples/simple_error_handler/: Makefile  simple_error_handler.c
examples/simple_gba_encoding/: Makefile  arglogo.agvs  argonaut.raw  simple_video.c
examples/simple_gba_video/: Makefile  simple_gba_video.elf  simple_gba_video.gba
examples/simple_gba_video_encode/: Makefile  after_credits.agvs  simple_gba_video_encode.c
examples/simple_video/: simple_video.c
examples/simple_video_agmvcli/: arglogo.agvs  foxlogo.agvs
examples/simple_video_and_audio/: Makefile  simple_video_and_audio.c
examples/simple_video_and_audio_agmvcli/: foxlogo.agvs
examples/simple_video_and_audio_encode/: simple_video_and_audio.c
include/: agmv.h  agmv_convert.h  agmv_decode.h  agmv_defines.h  agmv_encode.h  agmv_playback.h  agmv_utils.h
src/: agmv_convert.c  agmv_decode.c  agmv_encode.c  agmv_playback.c  agmv_utils.c  main.c
tools/agmvcli/: CMakeLists.txt  (+3 more)
(+16 files in other folders)
